--- a/research/04_model_evaluation.ipynb
+++ b/research/04_model_evaluation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\Research\\\\MLOps\\\\MLOps-Foundation\\\\End-to-End-Chicken-Disease-Classification-using-Fecal-Image\\\\research'"
+       "'e:\\\\pjt\\\\chicken_classifier\\\\Chicken-disease-classifier\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\Research\\\\MLOps\\\\MLOps-Foundation\\\\End-to-End-Chicken-Disease-Classification-using-Fecal-Image'"
+       "'e:\\\\pjt\\\\chicken_classifier\\\\Chicken-disease-classifier'"
       ]
      },
      "execution_count": 4,
@@ -60,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"bappymalik4161/ML-Pipeline-using-DVC\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">                                       <span style=\"font-weight: bold\">❗❗❗ AUTHORIZATION REQUIRED ❗❗❗</span>                                        \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Initialized MLflow to track repo \u001b[32m\"bappymalik4161/ML-Pipeline-using-DVC\"\u001b[0m\n"
+       "                                       \u001b[1m❗❗❗ AUTHORIZATION REQUIRED ❗❗❗\u001b[0m                                        \n"
       ]
      },
      "metadata": {},
@@ -79,11 +79,76 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository bappymalik4161/ML-Pipeline-using-DVC initialized!\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">c:\\Users\\User\\anaconda3\\envs\\cnnclassifier\\lib\\site-packages\\rich\\live.py:231: UserWarning: install \"ipywidgets\" \n",
+       "for Jupyter support\n",
+       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Repository bappymalik4161/ML-Pipeline-using-DVC initialized!\n"
+       "c:\\Users\\User\\anaconda3\\envs\\cnnclassifier\\lib\\site-packages\\rich\\live.py:231: UserWarning: install \"ipywidgets\" \n",
+       "for Jupyter support\n",
+       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Open the following link in your browser to authorize the client:\n",
+      "https://dagshub.com/login/oauth/authorize?state=bf93db2e-32e2-4456-8b65-a8669ae5d05f&client_id=32b60ba385aa7cecf24046d8195a71c07dd345d9657977863b52e7748e0f0f28&middleman_request_id=1ef7ff1e8c8ed5c07cd601aa151fcb7dc9ddd1d8ac226eed613ab72a563b06eb\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as abess96\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Accessing as abess96\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"abess96/Chicken-disease-classifier\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Initialized MLflow to track repo \u001b[32m\"abess96/Chicken-disease-classifier\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository abess96/Chicken-disease-classifier initialized!\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Repository abess96/Chicken-disease-classifier initialized!\n"
       ]
      },
      "metadata": {},
@@ -92,12 +157,12 @@
    ],
    "source": [
     "import dagshub\n",
-    "dagshub.init(repo_owner='bappymalik4161', repo_name='ML-Pipeline-using-DVC', mlflow=True)"
+    "dagshub.init(repo_owner='abess96', repo_name='Chicken-disease-classifier', mlflow=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +210,7 @@
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
     "            training_data=\"artifacts/data_ingestion/Chicken-fecal-images\",\n",
-    "            mlflow_uri=\"https://dagshub.com/bappymalik4161/ML-Pipeline-using-DVC.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/abess96/Chicken-disease-classifier.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_batch_size=self.params.BATCH_SIZE\n",
@@ -157,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,43 +319,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-12-18 14:28:06,044: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-12-18 14:28:06,045: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-12-18 14:28:06,046: INFO: common: created directory at: artifacts]\n",
+      "[2025-04-18 00:28:37,136: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-04-18 00:28:37,146: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-04-18 00:28:37,149: INFO: common: created directory at: artifacts]\n",
       "Found 116 images belonging to 2 classes.\n",
-      "8/8 [==============================] - 3s 377ms/step - loss: 12.5823 - accuracy: 0.5000\n"
+      "8/8 [==============================] - 69s 8s/step - loss: 14.3686 - accuracy: 0.5000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/12/18 14:28:11 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2025/04/18 00:30:05 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-12-18 14:28:11,775: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "[2024-12-18 14:28:12,065: INFO: builder_impl: Assets written to: C:\\Users\\AC\\AppData\\Local\\Temp\\tmpavm8mg6x\\model\\data\\model\\assets]\n"
+      "[2025-04-18 00:30:10,321: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "[2025-04-18 00:30:12,744: INFO: builder_impl: Assets written to: C:\\Users\\User\\AppData\\Local\\Temp\\tmpyq70mjet\\model\\data\\model\\assets]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Anaconda3\\envs\\cnncls\\lib\\site-packages\\_distutils_hack\\__init__.py:31: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
+      "c:\\Users\\User\\anaconda3\\envs\\cnnclassifier\\lib\\site-packages\\_distutils_hack\\__init__.py:31: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
       "  warnings.warn(\n",
       "Successfully registered model 'VGG16Model'.\n",
-      "2024/12/18 14:30:14 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 1\n",
+      "2025/04/18 00:32:15 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 1\n",
       "Created version '1' of model 'VGG16Model'.\n"
      ]
     }
